--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -24,7 +24,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
-  .create-trip-form{
+  .create-trip-form, .update-trip-form{
     display: flex;
     flex-direction: column;
     width: 20%;
