--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial, sans-serif;
+  background-color: #dde6ed;
+  color: #27374d;
 }
 
 .destination-form,
@@ -28,8 +30,8 @@ body {
   width: 15%;
   border: 1px solid;
   border-radius: 5px;
-  box-shadow: 1px 1px 5px 5px rgb(180, 177, 177);
-  background-color: rgb(235, 242, 248);
+  box-shadow: 1px 1px 5px 5px #526d82;
+  background-color: aliceblue;
   padding-top: 20px;
   padding-bottom: 40px;
   padding-right: 20px;
