--- a/frontend/styles/trips.css
+++ b/frontend/styles/trips.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial, sans-serif;
+  background-color: #dde6ed;
+  color: #27374d;
 }
 
 .trip-container {
@@ -11,6 +13,7 @@ body {
   border-radius: 5px;
   box-shadow: 1px 1px 5px 5px rgb(180, 177, 177);
   margin-top: 20px;
+  background-color: aliceblue;
 }
 
 .data-item {
